--- a/public/styles/style1.css
+++ b/public/styles/style1.css
@@ -1,4 +1,97 @@
+@font-face {
+    font-family: 'WorkSans-Regular';
+    src: url('../fonts/WorkSans-Regular.eot');
+    src: url('../fonts/WorkSans-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/WorkSans-Regular.woff') format('woff'),
+    url('../fonts/WorkSans-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'WorkSans-Light';
+    src: url('../fonts/WorkSans-Light.eot');
+    src: url('../fonts/WorkSans-Light.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/WorkSans-Light.woff') format('woff'),
+    url('../fonts/WorkSans-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'WorkSans-Bold';
+    src: url('../fonts/WorkSans-Bold.eot');
+    src: url('../fonts/WorkSans-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/WorkSans-Bold.woff') format('woff'),
+    url('../fonts/WorkSans-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 body {
-  background-color: pink;
+  margin: 0;
+  padding: 0;
+  font-family: 'WorkSans-Regular';
+}
+.wrap_header {
+  width: 100%;
+  background: #05060B;
+  display: flex;
+  justify-content: center;
+}
+.header {
+  width: 1290px;
+  height: 80px;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 45% repeat(7, 1fr);
+  align-items: center;
+}
+.nav_header {
   color: white;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  position: relative;
+  top: -26px;
+  display: inline-flex;
+  justify-content: center;
+}
+ #ass {
+  left: -91px;
+}
+ #event {
+  left: -44px;
+}
+ #member {
+  left: -6px;
+}
+ #new {
+  left: 25px;
+}
+ #cont {
+  left: 51px;
+}
+#login {
+  width: 130px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1.5px solid #F6DBA8;
+  box-sizing: border-box;
+  position: relative;
+  left: 100px;
+}
+#logo {
+  position: relative;
+  top: 29px;
+}
+#under_logo {
+  position: relative;
+  width: 162px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15.7772px;
+  line-height: 19px;
+  color: #787878;
+  grid-column: 1 / 2;
+  top: 39px;
 }
