--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,38 @@
+/*Обнуление*/
+*{
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+*,*:before,*:after{
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+nav,footer,header,aside{display: block;}
+html,body{
+	height: 100%;
+	width: 100%;
+	font-size: 100%;
+	line-height: 1;
+	font-size: 14px;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+input::-ms-clear{display: none;}
+button{cursor: pointer; background-color: Transparent;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*--------------------*/
+
 @font-face {
     font-family: 'WorkSans-Regular';
     src: url(/fonts/WorkSans-Regular.eot);
@@ -96,3 +131,313 @@ body {
   top: 39px;
 }
 
+/* MainSection1 */
+.wrap__main-section1 {
+    width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+    background-color: rgba(5, 6, 11, 1);
+}
+.main__section1 {
+    width: 1290px;
+    height: 980px;
+    display: flex;
+    justify-content: space-between;
+}
+.section1__description {
+    margin-top: 393px;
+}
+.section1__title {
+    font-family: "WorkSans-Bold";
+    font-style: normal;
+    font-weight: 800;
+    font-size: 50px;
+    line-height: 130%;
+    color: #FFFFFF;
+    margin-bottom: 10px;
+}
+.section1__paragraph {
+    font-family: "WorkSans-Regular";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 160%;
+    color: #FFFFFF;
+}
+.section1__link, .section1__link:visited {
+    margin-top: 16.6px;
+    font-family: "WorkSans-Regular";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 160%;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+}
+.section1__img-container {
+    margin-top: 101px;
+    width: 414px;
+}
+.section1__img-title {
+    font-family: "WorkSans-Regular";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 140%;
+    color: #FFFFFF;
+}
+.section1__img-davos {
+    margin-top: 17px;
+    margin-bottom: 48px;
+    width: 414px;
+    height: 291px;
+    background: #0E1010;
+    border: 2px solid #F6DBA8;
+    box-sizing: border-box;
+    backdrop-filter: blur(16px);
+    border-radius: 30px;
+}
+.section1__img-dubai {
+    width: 414px;
+    height: 291px;
+    background: #0E1010;
+    border: 2px solid #F6DBA8;
+    box-sizing: border-box;
+    backdrop-filter: blur(16px);
+    border-radius: 30px;
+    /* mix-blend-mode: lighten; */
+    box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
+}
+/* MainSection2 */
+.wrap__main-section2 {
+    width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+    background-color: #111419;
+}
+.main__section2 {
+    width: 1290px;
+    height: 570px;
+}
+.section2-title {
+    margin-top: 60px;
+    margin-bottom: 10px;
+    font-family: "WorkSans-Bold";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 53px;
+    letter-spacing: -0.02em;
+    color: #FFFFFF;
+}
+.section2-paragraph {
+    font-family: 'WorkSans-Regular';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 160%;
+    color: #FFFFFF;
+    margin-bottom: 83px;
+}
+.section2__logo-container {
+    width: 100%;
+}
+.section2__logo-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+.section2__logo-list > li:nth-child(1) {
+    margin-right: 130px;
+}
+.section2__logo-list > li:nth-child(2) {
+    margin-right: 130px;
+}
+.section2__logo-list > li:nth-child(3) {
+    margin-right: 130px;
+}
+.section2__logo-list > li:nth-child(5) {
+    margin-right: 190px;
+    margin-top: 93px;
+}
+.section2__logo-list > li:nth-child(6) {
+    margin-right: 190px;
+    margin-top: 106px;
+}
+.section2__logo-list > li:nth-child(7) {
+    margin-right: 190px;
+    margin-top: 102px;
+}
+.section2__logo-list > li:nth-child(8) {
+    margin-top: 90px;
+}
+/* MainSection3 */
+.wrap__main-section3 {
+    width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+    background-color: #05060B;
+}
+.main__section3 {
+    margin-top: 190px;
+    width: 1290px;
+}
+.section3-title {
+    font-family: 'WorkSans-Bold';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 53px;
+    letter-spacing: -0.02em;
+    color: #FFFFFF;
+}
+.section3__container-img {
+    margin-top: 20px;
+}
+.section3-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+.section3-list > li:nth-child(1) {
+    margin-right: 30px;
+}
+.section3-list > li:nth-child(2) {
+    margin-right: 30px;
+}
+.section3-list > li:nth-child(4) {
+    margin-right: 30px;
+    margin-top: 30px;
+}
+.section3-list > li:nth-child(5) {
+    margin-right: 30px;
+    margin-top: 30px;
+}
+.section3-list > li:nth-child(6) {
+    margin-right: 30px;
+    margin-top: 30px;
+}
+.section3-list > li:nth-child(7) {
+    margin-top: 30px;
+}
+.section3-list > li:nth-child(8) {
+    margin-right: 30px;
+    margin-top: 30px;
+}
+.section3-list > li:nth-child(9) {
+    margin-right: 30px;
+    margin-top: 30px;
+}
+.section3-list > li:nth-child(10) {
+    margin-top: 30px;
+}
+.section3__events {
+    margin-top: 190px;
+    margin-bottom: 190px;
+}
+.events__title-container {
+    width: 490px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 38px;
+}
+.events__title-link, .events__title-link:visited {
+    font-family: 'WorkSans-Regular';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 35px;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+    margin-bottom: 5.39px;
+}
+.events__button-container > button:nth-child(2) {
+    margin-top: 20px;
+}
+.events__button {
+    width: 1290px;
+    height: 80px;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    padding: 20px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+.event-paragraph {
+    font-family: 'WorkSans-Regular';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 23px;
+    color: #FFFFFF;
+    text-align: start;
+}
+.events__button > p:nth-child(1) {
+    flex-basis: 21.5%;
+    font-size: 30px;
+    line-height: 35px;
+}
+.events__button > p:nth-child(2) {
+    flex-basis: 24.8%;
+    margin-left: 30px;
+}
+.events__button > p:nth-child(3) {
+    flex-basis: 2.65%;
+    margin-left: 588px;
+}
+/* Footer */
+.wrap__footer {
+    width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+    background-color: #111419;
+}
+.footer {
+    margin: 70px 0px;
+    width: 1290px;
+    height: 180px;
+    display: flex;
+}
+.footer__logo {
+    width: 74px;
+    height: 22px;
+}
+.footer__logo-img {
+    width: 100%;
+}
+.footer-link {
+    font-family: 'WorkSans-Regular';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 23px;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+}
+.footer-item {
+    margin-bottom: 20px;
+}
+.footer__list1 {
+    margin-left: 200px;
+}
+.footer__list2 {
+    margin-left: 100px;
+}
+.footer__list3 {
+    margin-left: 100px;
+}
+.footer__list3 > li:nth-child(3) {
+    margin-bottom: 46px;
+}
+.footer__list4 {
+    margin-left: 405px;
+}
+#social_networks {
+    width: 70px;
+    display: flex;
+    justify-content: space-between;
+}
