--- a/public/styles/style5.css
+++ b/public/styles/style5.css
@@ -17,7 +17,7 @@
     height: 22px;
 }
 .footer__logo-img {
-    width: 100%;
+    width: 74px;
 }
 .footer-link {
     font-family: 'WorkSans-Regular';
