--- a/public/styles/style2.css
+++ b/public/styles/style2.css
@@ -41,6 +41,7 @@
     line-height: 160%;
     text-decoration-line: underline;
     color: #FFFFFF;
+    display: block;
 }
 .section1__img-container {
     margin-top: 101px;
@@ -73,6 +74,5 @@
     box-sizing: border-box;
     backdrop-filter: blur(16px);
     border-radius: 30px;
-    /* mix-blend-mode: lighten; */
     box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
 }
