--- a/public/styles/style4.css
+++ b/public/styles/style4.css
@@ -78,12 +78,13 @@
     text-decoration-line: underline;
     color: #FFFFFF;
     margin-bottom: 5.39px;
+    display: block;
 }
 .events__button-container > button:nth-child(2) {
     margin-top: 20px;
 }
 .events__button {
-    width: 1290px;
+    width: 100%;
     height: 80px;
     border: 2px solid #FFFFFF;
     box-sizing: border-box;
