--- a/public/styles/tablet1.css
+++ b/public/styles/tablet1.css
@@ -9,10 +9,10 @@
     .header {
         margin: 20px 0px 0px 0px;
     }
-    .nanigation-item {
+    .navigation-item {
         margin-left: 36px;
     }
-    .nanigation-link {
+    .navigation-link {
         font-size: 18px;
     }
     .nav-login {
