--- a/public/styles/tablet2.css
+++ b/public/styles/tablet2.css
@@ -10,10 +10,10 @@
         margin: 28px 0px 0px 0px;
         height: 45px;
     }
-    .nanigation-item {
+    .navigation-item {
         margin-left: 22px;
     }
-    .nanigation-link {
+    .navigation-link {
         font-size: 16px;
     }
     #login {
