--- a/public/styles/phone1.css
+++ b/public/styles/phone1.css
@@ -26,7 +26,7 @@
         min-height: 100px;
         z-index: 2;
     }
-    .nanigation {
+    .navigation {
         position: relative;
         display: flex;
         justify-content: space-between;
@@ -77,12 +77,12 @@
     .header__burger.active span {
         transform: scale(0);
     }
-    .nanigation-list {
+    .navigation-list {
         position: fixed;
         top: -100%;
         left: 0;
         width: 100%;
-        background-color: #E5E5E5;
+        background-color: #04020c;
         height: 100%;
         align-items: start;
         padding: 120px 10px 20px 20px;
@@ -90,13 +90,13 @@
         transition: all 0.3s ease 0s;
         overflow: auto;
     }
-    .nanigation-list.active {
+    .navigation-list.active {
         top: 0;
     }
-    .nanigation-list li {
+    .navigation-list li {
         margin: 0px 0px 20px 0px;
     }
-    .nanigation-link {
+    .navigation-link {
         margin: 0px 0px 0px 0px;
         font-size: 24px;
     }
