--- a/public/styles/style1.css
+++ b/public/styles/style1.css
@@ -30,7 +30,7 @@ body {
   padding: 0;
   font-family: 'WorkSans-Regular';
 }
-.wrap_header {
+.wrap__header {
   width: 100%;
   background: #05060B;
   display: flex;
@@ -41,19 +41,19 @@ body {
   width: 1290px;
   height: 50px;
 }
-.nanigation {
+.navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.nanigation-list {
+.navigation-list {
   display: flex;
   align-items: center;
 }
-.nanigation-item {
+.navigation-item {
   margin-left: 50px;
 }
-.nanigation-link {
+.navigation-link {
   font-family: 'WorkSans-Regular';
   font-style: normal;
   font-weight: normal;
