--- a/main.css
+++ b/main.css
@@ -2304,6 +2304,7 @@ body {
 .event__section {
     margin-top: 620px;
     width: 850.05px;
+    position: relative;
 }
 .event__section-title {
     font-family: "WorkSans-Bold";
@@ -2330,6 +2331,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: end;
+    margin-bottom: 37.63px;
 }
 .event__section2-title {
     font-family: "WorkSans-Bold";
@@ -2350,4 +2352,163 @@ body {
     text-decoration-line: underline;
     color: #FFFFFF;
     margin-top: 13px;
+    margin-bottom: 5px;
+}
+/* EventSection tablet 1 */
+@media (min-width: 992px) and (max-width: 1290px) {
+    .event__container {
+        width: 952px;
+        height: 1338px;
+    }
+    .event-img {
+        width: 883.52px;
+        height: 275.85px;
+        left: 33.7px;
+        top: 314px;
+    }
+    .event__section {
+        margin-top: 544px;
+        width: 709px;
+    }
+    .event__section-title {
+        font-size: 46px;
+    }
+    .event__section-paragraph {
+        font-size: 26px;
+    }
+    .event__section2 {
+        margin-top: 170px;
+    }
+    .event__title-container {
+        width: 673px;
+        margin-bottom: 35px;
+    }
+    .event__section2-title {
+        font-size: 40px;
+        line-height: 47px;
+    }
+    .event__section2-link {
+        font-size: 26px;
+        line-height: 30px;
+        margin-bottom: 4px;
+    }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+    .event__container {
+        width: 730px;
+        height: 1163px;
+    }
+    .event-img {
+        width: 704.8px;
+        height: 220.05px;
+        top: 263.6px;
+    }
+    .event__section {
+        margin-top: 494px;
+        width: 540px;
+    }
+    .event__section-title {
+        font-size: 35px;
+    }
+    .event__section-paragraph {
+        font-size: 20px;
+    }
+    .event__section2 {
+        margin-top: 150px;
+    }
+    .event__title-container {
+        width: 538px;
+        margin-bottom: 25px;
+    }
+    .event__section2-title {
+        font-size: 30px;
+        line-height: 35px;
+    }
+    .event__section2-link {
+        font-size: 22px;
+        line-height: 26px;
+        margin-top: 6px;
+        margin-bottom: 3px;
+    }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+    .event__container {
+        width: 537px;
+        height: 970px;
+    }
+    .event-img {
+        width: 537px;
+        height: 146.21px;
+        top: 183.79px;
+    }
+    .event__section {
+        margin-top: 334px;
+        width: 481px;
+    }
+    .event__section-title {
+        font-size: 35px;
+    }
+    .event__section-paragraph {
+        font-size: 18px;
+        line-height: 140%;
+    }
+    .event__section2 {
+        margin-top: 140px;
+    }
+    .event__title-container {
+        width: 536px;
+        margin-bottom: 20px;
+    }
+    .event__section2-title {
+        font-size: 30px;
+        line-height: 35px;
+    }
+    .event__section2-link {
+        font-size: 22px;
+        line-height: 26px;
+        margin-top: 6px;
+        margin-bottom: 3px;
+    }
+}
+@media (min-width: 320px) and (max-width: 575px) {
+    .event__container {
+        width: 286px;
+        height: 983px;
+    }
+    .event-img {
+        width: 286px;
+        height: 79.52px;
+        top: 101.62px;
+    }
+    .event__section {
+        margin-top: 200px;
+        width: 286px;
+    }
+    .event__section-title {
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+    .event__section-paragraph {
+        font-size: 16px;
+        line-height: 140%;
+    }
+    .event__section2 {
+        margin-top: 100px;
+    }
+    .event__title-container {
+        width: 162px;
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+    .event__section2-title {
+        font-size: 28px;
+        line-height: 33px;
+        margin-bottom: 10px;
+    }
+    .event__section2-link {
+        font-size: 18px;
+        line-height: 21px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
 }
